--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://msyrl.github.io/profile",
+  "homepage": "https://msyrl.github.io",
   "name": "my-profile",
   "version": "0.1.0",
   "private": true,
